--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "style-loader": "^3.2.1",
     "webpack": "^5.51.2",
     "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "firebase": "^9.0.1"
   }
 }
